Edited most of the behaviour as defined in new requirements: * save button always visible * merged field sets * removed edit icons * support for disabled fields * fixed small bugs

--- a/src/styles/tink-prototype-skeleton.scss
+++ b/src/styles/tink-prototype-skeleton.scss
@@ -4,6 +4,41 @@
 @import "../../bower_components/tink-core/dist/tink/mixins";
 
 
+.the-fieldset {
+  .stick {
+    background-color: rgba($white, .9);
+    overflow: hidden;
+    transition: box-shadow $animation-speed;
+
+    h2.h3 {
+      margin: rem(14 0);
+    }
+    &.is-sticky {
+      box-shadow: 0 0 5px rgba($black, .5);
+      z-index: 100 !important;
+    }
+  }
+
+  .fieldset-editable-buttons {
+    // visibility: hidden;
+    transition: transform $animation-speed;
+    transform: translate(0,-100%);
+
+    padding: rem(4 0);
+
+    .btn-transparent {
+      background-color: transparent;
+      border: none;
+      color: $brand;
+      font-weight: normal;
+
+      &:hover {
+        background-color: rgba($black, .1);
+      }
+    }
+  }
+}
+
 .fieldset-editable {
   border-radius: $border-radius-base;
   margin: rem(8 0);
@@ -26,22 +61,11 @@
     }
   }
 
-  // Style the edit icon behind an inputfield
-  .empty-icon {
-    color: $gray-light;
-    display: none;
+  .anchor-add {
+    left: rem(12);
     position: absolute;
-    left: rem(26);
-    top: rem(7);
-    z-index: -1;
-  }
-
-  .edit-icon {
-    color: $gray-light;
-    position: absolute;
-    right: rem(22);
-    top: rem(6);
-    z-index: -1;
+    top: 0;
+    // top: rem(2);
   }
 
   .add-icon {
@@ -53,24 +77,10 @@
     z-index: -1;
   }
 
-  .btn-transparent {
-    background-color: transparent;
-    border: none;
-    color: $brand;
-    font-weight: normal;
-
-    &:hover {
-      background-color: rgba($black, .1);
-    }
-  }
-
-  .fieldset-editable-buttons {
-    visibility: hidden;
-  }
-
   .anchor-add {
     margin: 1px;
     padding: rem($padding-base-vertical $padding-base-horizontal);
+    position: absolute;
   }
 
   .input-add {
@@ -96,12 +106,6 @@
 
     // &[value=''] {
     &:invalid {
-      ~ .empty-icon {
-        display: block;
-      }
-      ~ .edit-icon {
-        display: none;
-      }
       ~ .add-icon {
         display: block;
       }
@@ -162,7 +166,8 @@
     }
 
     .fieldset-editable-buttons {
-      visibility: visible;
+      // visibility: visible;
+      transform: translate(0,0);
     }
   }
 
